Created 3 Docker files :whale: for API, WEB and INIT

--- a/content-init/Dockerfile
+++ b/content-init/Dockerfile
@@ -1,18 +1,14 @@
-FROM node:alpine AS base
-WORKDIR /usr/src/app
-ENV MONGODB_CONNECTION=mongodb://mongo:27017/contentdb
-
+# This is the base image that can be used
 FROM node:argon AS build
+#This is the environment variable with connection to the MongoDB. Can be overriden in the docker run command with the -e switch
+ENV MONGODB_CONNECTION=mongodb://mongo:27017/contentdb
+# This is the directory within the container where commands will be executed
 WORKDIR /usr/src/app
-
-# Install app dependencies
+# Copy the package json file to the workdir
 COPY package.json /usr/src/app/
+# Run the NPM install command to build the application
 RUN npm install
-
-# Bundle app source
+# Copy the rest of the sources
 COPY . /usr/src/app
-
-FROM base as final
-WORKDIR /usr/src/app
-COPY --from=build /usr/src/app .
+# Start the application
 CMD [ "npm", "start" ]
