--- a/content-api/Dockerfile
+++ b/content-api/Dockerfile
@@ -1,20 +1,17 @@
-FROM node:alpine AS base
-RUN apk -U add curl
-WORKDIR /usr/src/app
-EXPOSE 3001
+# Dockerfile for content-api
+# This is the base image that can be used
+FROM node:argon  
+#This is the environment variable with connection to the MongoDB. Can be overriden in the docker run command with the -e switch
 ENV MONGODB_CONNECTION=mongodb://mongo:27017/contentdb
-
-FROM node:argon AS build
-WORKDIR /usr/src/app
-
-# Install app dependencies
+# This is the directory within the container where commands will be executed
+WORKDIR /usr/src/app 
+# Copy the package json file to the workdir
 COPY package.json /usr/src/app/
+# This is the port that the container exposes
+EXPOSE 3001
+# Run the NPM install command to build the application
 RUN npm install
-
-# Bundle app source
+# Copy the rest of the sources
 COPY . /usr/src/app
-
-FROM base AS final
-WORKDIR /usr/src/app
-COPY --from=build /usr/src/app .
+# Start the application
 CMD [ "npm", "start" ]
